feat: add basic otel to angular app

--- a/apps/web/src/app/app.html
+++ b/apps/web/src/app/app.html
@@ -328,6 +328,13 @@
       </div>
     </div>
   </div>
+  <button
+      (click)="btnClick()"
+      id="my-awesome-button"
+      class="some-classy-button"
+    >
+      Click me
+    </button>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
